--- a/index.html
+++ b/index.html
@@ -8,15 +8,17 @@
     <!-- This links to the stylesheet for this page -->
     <link rel="stylesheet" type="text/css" href="style.css">
     
-      <link id="favicon" rel="icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcS7bEOq3-Oyoof1s1ZOiO_YIAxI7zKBX36y7wbOYHdHNsccYrfD&usqp=CAU" type="image/x-icon">
+      <link id="favicon" rel="icon" href="logo.jpg" type="image/x-icon">
   </head>
 
   <body>
     <div class="wrapper">
       <h2 class="color-2">
-        The right steps have been to visit this website 
-        <p>. Love & listener</p>
-        <p>. Manager BOT / UCING</p>
+        The right steps have been to visit this website
+ 
+ <h5>Live</h5>
+ <p>. Love & listener</p>
+ <p>. Manager BOT / UCING</p>
 
 <h5>Cast</h5>
 <p>. Love</p>
