--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- This is the title of the page - what's written will appear at the top of the browser window -->
-    <title>Paijo J Darme</title>
+    <title>XCOPIES</title>
 
     <!-- This links to the stylesheet for this page -->
     <link rel="stylesheet" type="text/css" href="style.css">
     
-      <link id="favicon" rel="icon" href="logo.jpg" type="image/x-icon">
+      <link id="favicon" rel="icon" href="/logo.jpg" type="image/x-icon">
   </head>
 
   <body>
